dps: New Navbar test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,12 +25,12 @@
     ],
     "rules": {
         "import/no-named-as-default": 0,
-        "camelcase": "off",
+        "camelcase": "warn",
         "import/no-unresolved": "error",
         "class-methods-use-this": "off",
         "import/prefer-default-export": "off",
         "no-shadow": "off",
-        "no-console": "off",
+        "no-console": "warn",
         "no-useless-constructor": "off",
         "no-empty-function": "off",
         "lines-between-class-members": "off",
