--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn
-    - run: yarn ci
+    - run: yarn install --frozen-lockfile
     - run: yarn run build --if-present
     - run: yarn test
