--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,18 +14,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - uses: actions/setup-node@v2
+    
+    - name: Use Node.js 16.x
+      uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn
+        node-version: '16.x'
     - run: yarn install --frozen-lockfile
-    - run: yarn run build --if-present
+    - run: yarn run build --if-present --passWithNoTests
     - run: yarn test
