--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,12 +7,19 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  eslint:
+    name: run linter
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Deploy react app to github pages
-      uses: tanwanimohit/deploy-react-to-ghpages@v1.0.1
+      - uses: actions/checkout@v2
+      - uses: Adzz/jest_test_action@v1.0.0
+        with:
+          command: eslint
+  tests:
+    name: run tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: Adzz/jest_test_action@v1.0.0
+        with:
+          command: test:ci
