--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Deploy react app to github pages
-        uses: tanwanimohit/deploy-react-to-ghpages@v1.0.1
+      runs: 
+        using: 'composite'
+        steps: 
+          - run : npm i --legacy-peer-deps
+            shell: bash
+          - run : npm ci
+            shell: bash
+          - run : npm run build
+            shell: bash
+          - run : git config user.name github-actions
+            shell: bash
+          - run : git config user.email github-actions@github.com
+            shell: bash
+          - run : git --work-tree build add --all
+            shell: bash
+          - run : git commit -m "Automatic Deploy action run by github-actions"
+            shell: bash
+          - run : git push origin HEAD:gh-pages --force
+            shell: bash
+
