--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
           cache: "npm"
       - run: npm i --force
       - run: npm run build --if-present
-      - run: npm test
+      - run: npm test --passWithNoTests`
