--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,6 @@ jobs:
         with:
           node-version: "16.x"
           cache: "npm"
-      - run: npm i --force
+      - run: npm i --legacy-peer-deps
       - run: npm run build --if-present
-      - run: npm test --passWithNoTests`
+      - run: npm test --passWithNoTests
