--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
           cache: "npm"
       - run: npm i --legacy-peer-deps
       - run: npm run build --if-present
-      - run: npm test --passWithNoTests
+      - run: npm test
