--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
+name: Deploy
 
 on:
   push:
@@ -10,16 +7,20 @@ on:
     branches: ["master"]
 
 jobs:
-  build:
+  build-and-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16.x"
-          cache: "npm"
-      - run: npm i --legacy-peer-deps
-      - run: npm run build --if-present
-      - run: npm test
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Build
+        run: npm i --legacy-peer-deps
+
+      - name: Deploy
+        run: |
+          git config --global user.name 'Deploy'
+          git config --global user.email 'deploy@portifolio.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}    
+          npm run deploy
